--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,19 @@ amqp==2.5.1
 billiard==3.6.1.0
 celery==4.3.0
 Django==2.2.4
+django-celery-beat==1.5.0
 django-celery-results==1.1.2
+django-timezone-field==3.0
+django-widget-tweaks==1.4.5
 importlib-metadata==0.19
 kombu==4.6.4
 Pillow==6.1.0
+python-crontab==2.3.8
+python-dateutil==2.8.0
 python-dotenv==0.10.3
 pytz==2019.2
 redis==3.3.7
+six==1.12.0
 sqlparse==0.3.0
 vine==1.3.0
 zipp==0.5.2
